Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-72744

macOS: Qt does not hide cursor when entering text

    XMLWordPrintable

Details

    • macOS
    • 946737d882516d973c7ad54432c262d3381f1cf7 (qt/tqtc-qtbase/6.2)

    Description

      The native behavior is to hide the cursor once text input starts. See use of [NSCursor setHiddenUntilMouseMoves:YES]; in WebKit/Blink. Unsure of when this should not be the case. Looking at what NSTextField and NSTextView does is probably a good reference.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vestbo Tor Arne Vestbø
            vestbo Tor Arne Vestbø
            Veli-Pekka Heinonen Veli-Pekka Heinonen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes