macOS: Hide mouse cursor when initiating IM enabled text input

Fixes: QTBUG-72744
Change-Id: I952710e88a11fd00498562c9011461a010f02f7b
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 52f635b9a0e1fe074bf39b49b25d3ef3f6484676)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>